Il comando !massshooting è ora un comando slash